--- a/app/[locale]/globals.css
+++ b/app/[locale]/globals.css
@@ -4,7 +4,7 @@
  
 @layer base {
   :root {
-    --background: 0 0% 100%;
+    --background: 40, 38%, 92%;
     --foreground: 222.2 47.4% 11.2%;
  
     --muted: 210 40% 96.1%;
@@ -31,7 +31,7 @@
     --destructive: 0 100% 50%;
     --destructive-foreground: 210 40% 98%;
  
-    --ring: 215 20.2% 65.1%;
+    --ring: 0, 6%, 38%;
  
     --radius: 0.5rem;
   }
