--- a/frontend/app/[locale]/globals.css
+++ b/frontend/app/[locale]/globals.css
@@ -4,7 +4,7 @@
  
 @layer base {
   :root {
-    --background: 0 0% 100%;
+    --background: 40, 38%, 92%;
     --foreground: 222.2 47.4% 11.2%;
  
     --muted: 210 40% 96.1%;
@@ -31,7 +31,7 @@
     --destructive: 0 100% 50%;
     --destructive-foreground: 210 40% 98%;
  
-    --ring: 215 20.2% 65.1%;
+    --ring: 0, 6%, 38%;
  
     --radius: 0.5rem;
   }
@@ -144,6 +144,53 @@
   align-items: center;
   justify-content: center;
 }
+
+/* Donut chart start */
+.donut-chart {
+  position: relative;
+  width: 200px;
+  height: 200px;
+  border-radius: 50%;
+  overflow: hidden;
+}
+
+.chart-container {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  transform: rotate(-90deg);
+}
+
+.chart-slice,
+.chart-inner {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  clip: rect(0, 100px, 200px, 0); /* Adjust the values to modify the donut slice */
+}
+
+.chart-slice {
+  background-color: #f0ad4e; /* Adjust to your desired color */
+  transform: rotate(0deg);
+}
+
+.chart-inner {
+  background-color: #f5f5f5; /* Adjust to your desired color */
+  transform: rotate(270deg);
+}
+
+.chart-label {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  font-size: 24px;
+  font-weight: bold;
+  color: #333;
+}
+
+/* Donut chart end */
 
 @media (max-width: 991px) {
   .big-title {
