page profile and start of the projects page

--- a/frontend/app/[locale]/globals.css
+++ b/frontend/app/[locale]/globals.css
@@ -107,6 +107,18 @@
   background: rgba(102, 91, 91, .3);
 }
 
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type=number] {
+  -moz-appearance: textfield;
+}
+
 *:focus-visible {
   outline: none;
 }
